Fixed menu list on Mobile devices causes CheckoutModal overflow

--- a/src/components/views/Customer/CustomerMenu/style/Menu.scss
+++ b/src/components/views/Customer/CustomerMenu/style/Menu.scss
@@ -56,7 +56,7 @@
         }
     }
 
-    // Remove sidebar checkout container if breakpoint hits phone dimensions
+    // Remove sidebar checkout container if breakpoint hits Tablet portrait dimensions
     @include for-size(GetBreakpoint(TabletPortraitUp)){
         .CheckoutContainer {
             display: none;
@@ -65,6 +65,11 @@
     // Remove sidebar checkout container if breakpoint his phone dimensions
     @include for-size(GetBreakpoint(Phone)){
         flex-flow: column;
+        .InnerContainer {
+            .FoodMenuContainer {
+                max-height: 200px;
+            }
+        }
         .CheckoutContainer {
             display: none;
         }
